[ReactWeather] added style to examples page

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^3.14.0",
+    "eslint-config-google": "^0.7.1",
+    "eslint-plugin-react": "^6.9.0",
     "foundation-sites": "6.2.0",
     "jquery": "^2.2.1",
     "script-loader": "^0.6.1",
